2006-10-24  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * plugins/epiphany/Makefile.am: Changed installation directory 
    to something make distcheck could handle.

2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>

	* data/seahorse.schemas.in: Revert default to TRUE for key sharing. 
	See #355378

2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-ssh-source.c: Fix crasher when generating SSH key.
	Fixes #364081

2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>
	
	* configure.in: Configure properly when libnautilus-extension is not found.

2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>

	* plugins/applet/seahorse-applet.c: Fix assertion when clipboard contains
	plain text. Fixes #361897 

2006-10-05  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/seahorse-extension.c:
    * plugins/epiphany/mozilla/mozilla-helper.cpp: Fixed #356794

2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c: 
    * src/seahorse-key-manager-store.c: Fix problem with displaying 
    duplicated UIDs on a PGP key after looking at key's properties.
    Fixes #355380

2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-operation.c:
    * src/seahorse-pgp-source.c: Display error when keys to import are 
    created in the future. Fixes #356302
    
2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-key-set.c: Don't barf when the daemon sends us 
    'added' or 'changed' signals out of order. 
    * libseahorse/seahorse-secure-memory.c: Don't try to use secure memory
    when allocating secure memory failed.
    * libseahorse/seahorse-pgp-key-op.c: When changing password and password 
    is entered wrong X number of times, then cancel operation.
    
2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-ssh-generate.glade:
    * src/seahorse-ssh-upload.c: