@@ -1,3 +1,9 @@
+2006-10-26  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* plugins/nautilus-ext/seahorse-nautilus.c: Don't show seahorse
+	context menu items on desktop items like computer or trash.
+	Patch by Gilles Dartiguelongue
+
 2006-10-24  Adam Schreiber  <sadam@clemson.edu>
 
     * configure.in:
